fixed .container height on small screens

--- a/style.css
+++ b/style.css
@@ -119,7 +119,6 @@ p::before:not(footer p) {
 @media only screen and (max-width: 480px) {
     .container-main {
         width: 100%;
-        height: 100vh;
     }
 }
 
